<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sumozon"
        android:layout_alignEnd="@+id/sumozon"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="209dp"
        android:layout_marginEnd="10dp"
        android:onClick="onClick"
        android:text="@string/itog" />

    <TextView
        android:id="@+id/logo_text"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="106dp"
        android:text="@string/logo"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/dney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_text"
        android:layout_alignStart="@+id/logo_text"
        android:layout_alignEnd="@+id/logo_text"
        android:layout_marginStart="-105dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="-80dp"
        android:text="@string/kolvo_d"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="378dp"
        android:layout_height="53dp"
        android:layout_below="@+id/editTextNumber"
        android:layout_alignParentStart="true"
        android:layout_alignStart="@+id/editTextNumber"
        android:layout_alignEnd="@+id/editTextNumber"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="-5dp"
        android:text="@string/kolvo_m"
        android:textSize="20sp" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextNumber2"
        android:layout_alignStart="@+id/textView3"
        android:layout_alignEnd="@+id/editTextNumber2"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/ozon_y"
        android:textSize="25sp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="460sp"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dney"
        android:layout_alignParentStart="true"
        android:layout_alignStart="@+id/dney"
        android:layout_alignEnd="@+id/dney"
        android:autofillHints=""
        android:ems="10"
        android:hint="Количество"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_alignEnd="@+id/textView3"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Сумма продаж"
        android:inputType="number"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/sumozon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switch2"
        android:layout_alignStart="@+id/editTextNumber2"
        android:layout_alignEnd="@+id/editTextNumber2"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Сумма ОЗОН"
        android:inputType="number"
        android:textSize="30sp"
        tools:visibility="gone" />

</RelativeLayout>